syntax = "proto3";

package dalalstreet.api.actions;

option java_package = "dalalstreet.api.actions";
option java_multiple_files = true;

message LogoutRequest {
    // No request data
}

message LogoutResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        BadRequestError = 2;
    }
    StatusCode status_code = 1;
    string     status_message = 2;
}
