syntax = "proto3";
package dalalstreet.api.actions;

import "models/Notification.proto";

message GetNotificationsRequest {
    uint32 last_notification_id = 1;
    uint32 count = 2;
}
message GetNotificationsResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    bool more_exists = 3;
    repeated models.Notification notifications = 4;
}
