syntax = "proto3";

package dalalstreet.api.datastreams;

option java_multiple_files=true;

message StockPricesUpdate {
    map<uint32, uint64> prices = 1; // key: stockId, value: price
}
