syntax = "proto3";

package dalalstreet.api.models;

option java_multiple_files=true;

message LeaderboardRow {
    uint32 id = 1;
    uint32 user_id = 2;
    string user_name = 3;
    uint32 rank = 4;
    uint64 cash = 5;
    uint64 debt = 6;
    int64  stock_worth = 7;
    int64  total_worth = 8;
}
